--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-12  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated  Greek translation.
+
 2005-05-06  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
