--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-12  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated  Greek translation.
+
 2005-05-10  Pawan Chitrakar  <pawan@mpp.org.np>
 
 	* ne.po: Updated nepali translation
