--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-13  Ankit Patel <ankit644@yahoo.com>
+
+	* gu.po: Updated Gujarati Translation.
+
 2005-05-10  Adi Attar  <aattar@cvs.gnome.org>
 
 	* xh.po: Updated Xhosa translation.
