Updated Nepali Translation
2005-05-13  Pawan chitrakar  <pawan@nplinux.org>

	* ne.po: Updated Nepali Translation

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-13  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Updated Nepali Translation
+
 2005-05-12  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
