--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-16  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Updated nepali Translation
+
 2005-05-15  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
