--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-16  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkstatusbar.c (gtk_statusbar_size_allocate): Only shrink
+	the label if we need to.  (#169390, Felix Riemann)
+
 2005-05-10  Tor Lillqvist  <tml@novell.com>
 
 	* gdk/win32/gdkproperty-win32.c (gdk_screen_get_setting): Check
