--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-16  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 2005-05-16  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* ne.po: Updated Nepali translation
