--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-05-16  Matthias Clasen  <mclasen@redhat.com>
 
+	* configure.in (GTK_DOC_CHECK): Check for gtk-doc 1.4.
+
 	* gtk/gtktoggleaction.c (connect_proxy): Be more careful when
 	casting.  (#304089, Philip Langdale)
 
