--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,12 @@
+2005-05-16  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tree_widget.sgml: Use gtk-doc abbrevs instead of 
+	spelled out links.
+
+	* gtk/gtk-docs.sgml: Included the processed file xml/tree_widget.sgml.
+
+	* gtk/Makefile.am (expand_content_files): Add tree_widget.sgml.
+
 2005-05-08  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/tmpl/visuals.sgml: Fix a typo (#303473, Masao Mutoh)
