Don't blink the cursor if the entry is not editable. (#304171,Nikos
2005-05-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c (cursor_blinks): Don't blink the cursor if
	the entry is not editable.  (#304171,Nikos Kouremenos)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-05-16  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkentry.c (cursor_blinks): Don't blink the cursor if 
+	the entry is not editable.  (#304171,Nikos Kouremenos)
+	
 	* gtk/gtkfilechooserbutton.c (gtk_file_chooser_button_constructor): 
 	Make sure the action of the button and the dialog are in sync,
 	when the dialog is provided by the app.  (#303987, David A Knight)
