--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 2005-05-16  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkscale.c (gtk_scale_class_init): Don't bind GDK_Page_Up 
+	and GDK_Page_Down twice.  (#168333, Hazael Maldonado Torres)
+
 	* gtk/gtkentry.c (cursor_blinks): Don't blink the cursor if 
-	the entry is not editable.  (#304171,Nikos Kouremenos)
+	the entry is not editable.  (#304171, Nikos Kouremenos)
 	
 	* gtk/gtkfilechooserbutton.c (gtk_file_chooser_button_constructor): 
 	Make sure the action of the button and the dialog are in sync,
