--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/gdkwindow.c (gdk_window_set_bg_pattern): Adjust offsets
+	when recursing.  (#153682, Felipe Heidrich)
+
 2005-05-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkscale.c (gtk_scale_class_init): Don't bind GDK_Page_Up 
