--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-05-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkcombobox.c (gtk_combo_box_list_button_released): Keep
+	the popup posted if the button is released over the cellview.
+	This matches the behaviour of other combo box implementations.  
+	(#171378)
+
 2005-05-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkscale.c (gtk_scale_class_init): Don't bind GDK_Page_Up 
