--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-05-18  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk.symbols: 
+	* gtk/gtkdnd.h: 
+	* gtk/gtkdnd.c (gtk_drag_source_set_icon_name) 
+	(gtk_drag_set_icon_name): New functions to support themed 
+	drag icons.  (#116577, Christian Neumair)
+
 2005-05-17  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/x11/gdkdrawable-x11.c (gdk_x11_ref_cairo_surface): 
