--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-18  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk-sections.txt: Add new functions.
+
 2005-05-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/tree_widget.sgml: Use gtk-doc abbrevs instead of 
