Fix some errors in the handling of drop columns. (#143355, John Finlay)
2005-05-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_get_drop_column)
	(gtk_tree_view_set_column_drag_info): Fix some errors in the
	handling of drop columns.  (#143355, John Finlay)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-05-18  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreeview.c (gtk_tree_view_get_drop_column) 
+	(gtk_tree_view_set_column_drag_info): Fix some errors in the
+	handling of drop columns.  (#143355, John Finlay)
+
 	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_init): 
 	Remove the no longer needed workaround.
 
