Updated Indonesian translation
2005-05-18  Mohammad DAMT  <mdamt@gnome.org>

        * id.po: Updated Indonesian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-18  Mohammad DAMT  <mdamt@gnome.org>
+
+	* id.po: Updated Indonesian translation
+
 2005-05-16  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* ne.po: Updated nepali Translation
