Handle the Cancel button properly. (#304234, Sven Neumann)
2005-05-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c (dialog_response_cb): Handle the
	Cancel button properly.  (#304234, Sven Neumann)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-18  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkfilechooserbutton.c (dialog_response_cb): Handle the
+	Cancel button properly.  (#304234, Sven Neumann)
+
 2005-05-18  Anders Carlsson  <andersca@imendio.com>
 
 	* gtk/gtktextview.c: (gtk_text_view_flush_scroll),
@@ -6,9 +11,9 @@
 	If the horizontal adjustment changes because of a change in the
 	layout width, then do a complete redraw. This is because there
 	might be right-aligned or centered text that needs to be redrawn.
-	
-2005-05-18  Matthias Clasen  <mclasen@redhat.com>
 
+2005-05-18  Matthias Clasen  <mclasen@redhat.com>
+	
 	* gtk/gtkwidget.c (gtk_widget_add_events): Try harder to set
 	the event masks of descendent windows.  (#169821, Tommi Komulainen)
 
