Updated Welsh translation.
2005-05-18  Rhys Jones  <rhys@sucs.org>

	* cy.po: Updated Welsh translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-18  Rhys Jones  <rhys@sucs.org>
+
+	* cy.po: Updated Welsh translation.
+
 2005-05-18  Mohammad DAMT <mdamt@gnome.org>
 
 	* id.po: Updated Indonesian translation.
