--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-18  Rhys Jones  <rhys@sucs.org>
+
+	* cy.po: Updated Welsh translation.
+
 2005-05-16  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* da.po: Updated Danish translation.
