--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-19  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2005-05-18  Mohammad DAMT  <mdamt@gnome.org>
 
 	* id.po: Updated Indonesian translation.
