--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/migrating-GtkAction.sgml: Fix an example.  (#304808,
+	Ghorban M. Tavakoly)
+
 2005-05-08  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/tmpl/visuals.sgml: Fix a typo (#303473, Masao Mutoh)
