--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkimcontextsimple.c (check_table): Avoid a possible
+	buffer overrun.  (#142444, Leonard Michlmayr)
+
 2005-05-18  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkfilechooser.c (gtk_file_chooser_remove_shortcut_folder_uri): 
