--- a/gtk/xdgmime/ChangeLog
+++ b/gtk/xdgmime/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* xdgmimecache.c: Don't rely on C99 
+	types.  (#304924, John Ehresman)
+
 2005-04-29  Matthias Clasen  <mclasen@redhat.com>
 
 	* Sync to upstream.
