--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-22  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2005-05-19  Mohammad DAMT  <mdamt@gnome.org>
 
 	* id.po: Updated Indonesian translation
