Remove an unused variable. (#305130, Jaap A. Haitsma)
2005-05-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_search_init): Remove
	an unused variable.  (#305130, Jaap A. Haitsma)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-05-23  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreeview.c (gtk_tree_view_search_init): Remove
+	an unused variable.  (#305130, Jaap A. Haitsma)
+
 	* gtk/gtkfilechooserdefault.c (filter_create): Don't grab
 	the focus away from the file list when operating the filter
 	combo with the pointer.  (#304844, Sven Neumann)
