--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-24  Matthias Clasen  <mclasen@redhat.com>
+
+	* demos/gtk-demo/iconview.c (do_iconview): Fix a typo.
+
 2005-05-24  Tor Lillqvist  <tml@novell.com>
 
 	* gdk/win32/gdkproperty-win32.c (gdk_screen_get_setting): Handle
