Add a demo showing all picker widgets.
2005-05-25  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/Makefile.am (demos):
	* demos/gtk-demo/pickers.c: Add a demo showing all picker widgets.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* demos/gtk-demo/Makefile.am (demos): 
+	* demos/gtk-demo/pickers.c: Add a demo showing all picker widgets.
+
 2005-05-24  Matthias Clasen  <mclasen@redhat.com>
 
 	* demos/gtk-demo/iconview.c (do_iconview): Fix a typo.
