--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-25  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Update
+	* no.po: Update
+
 2005-05-23  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
