--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-25  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Update
+	* no.po: Update
+
 2005-05-18  Mohammad DAMT  <mdamt@gnome.org>
 
 	* id.po: Updated Indonesian translation
