Draw the background of rows insensitive when the treeview is insensitive.
2005-05-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): Draw the
	background of rows insensitive when the treeview is insensitive.
	(pointed out by Billy Biggs)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-05-25  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): Draw the 
+	background of rows insensitive when the treeview is insensitive.
+	(pointed out by Billy Biggs)
+
 	* demos/gtk-demo/clipboard.c: Demonstrate image copy-and-paste
 	and DND, and clipboard persistency.
 
