--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-05-25  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): Draw the 
+	background of rows insensitive when the treeview is insensitive.
+	(pointed out by Billy Biggs)
+
 	* gtk/gtkselection.c (gtk_target_list_add_image_targets): 
 	Make sure png comes first, otherwise dnd may use bmp by
 	default, loosing transparency.
