--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk-pixbuf/gdk-pixbuf-sections.txt: Add GdkPixbufSimplAnim
+	functions.
+
 2005-05-20  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/migrating-GtkAction.sgml: Fix an example.  (#304808,
